[project]
name = "writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "jinja2>=3.1.5",
    "plotly>=6.5.0",
    "nbconvert>=7.16.6",
    "anywidget>=0.9.21",
    "pathlib>=1.0.1",
    "openpyxl>=3.1.5",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
]
